src/objects/API_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for working with APIs (such as the LiveNation API)</description>
    <fields>
        <fullName>BitlyEndpointTemplate__c</fullName>
        <label>Bitly Endpoint Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BitlyKey__c</fullName>
        <inlineHelpText>Client secret used for the bitly integration.
(Temporarily place it here)</inlineHelpText>
        <label>Bitly Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BitlyUsername__c</fullName>
        <label>Bitly Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveNationAPI_Endpoint__c</fullName>
        <defaultValue>&quot;http://api.livenation.com&quot;</defaultValue>
        <inlineHelpText>Endpoint for the LiveNation API</inlineHelpText>
        <label>LiveNation API Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveNationAPI_Profiles__c</fullName>
        <defaultValue>&quot;System Administrator&quot;</defaultValue>
        <inlineHelpText>Comma separated list of profiles that can use the API to match Venues, Artists, etc.</inlineHelpText>
        <label>LiveNation API Profiles</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LiveNation_API_Timeout__c</fullName>
        <defaultValue>120</defaultValue>
        <inlineHelpText>Number of seconds to assume timeout on the LiveNation API</inlineHelpText>
        <label>LiveNation API Timeout</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>API Settings</label>
</CustomObject>